Fix prerequisites background color in dark mode

--- a/docusaurus/src/scss/admonition.scss
+++ b/docusaurus/src/scss/admonition.scss
@@ -207,7 +207,7 @@
     }
 
     &--prerequisites {
-      --custom-admonition-background-color: transparent;
+      // --custom-admonition-background-color: transparent;
     }
 
     &--note {
